--- a/apps/api/src/configuration/constraints/MaterialConstraint.yaml
+++ b/apps/api/src/configuration/constraints/MaterialConstraint.yaml
@@ -8,7 +8,7 @@ rules:
     conditions:
       relationMode: AND
       conditions:
-        - attribute: productName
+        - attribute: item.productName
           operator: IN
           value:
             - "{ProductNames.PRODUCT_LABELS_ON_ROLL}"
