--- a/apps/api/src/configuration/constraints/MinSizeConstraint.yaml
+++ b/apps/api/src/configuration/constraints/MinSizeConstraint.yaml
@@ -5,7 +5,7 @@ rules:
     conditions:
       relationMode: AND
       conditions:
-        - attribute: productName
+        - attribute: item.productName
           operator: IN
           value:
             - "{ProductNames.PRODUCT_WALL}"
