--- a/apps/api/src/configuration/filters/DeliveryRollSizeTypeFilter.yaml
+++ b/apps/api/src/configuration/filters/DeliveryRollSizeTypeFilter.yaml
@@ -10,6 +10,6 @@ rules:
     conditions:
       relationMode: and
       conditions:
-        - attribute: delivery
+        - attribute: item.attributes.delivery
           operator: ===
           value: roll
