--- a/apps/api/src/configuration/filters/InkFilter.yaml
+++ b/apps/api/src/configuration/filters/InkFilter.yaml
@@ -10,7 +10,7 @@ rules:
     conditions:
       relationMode: and
       conditions:
-        - attribute: laminate
+        - attribute: item.attributes.laminate
           operator: in
           value:
             - glossy_no_uv
