--- a/apps/api/src/configuration/constraints/CutDirectionConstraint.yaml
+++ b/apps/api/src/configuration/constraints/CutDirectionConstraint.yaml
@@ -5,7 +5,7 @@ rules:
     conditions:
       relationMode: AND
       conditions:
-        - attribute: productName
+        - attribute: item.productName
           operator: NOT_IN
           value:
             - '{ProductNames.PRODUCT_LABELS_ON_ROLL}'
@@ -16,10 +16,10 @@ rules:
     conditions:
       relationMode: OR
       conditions:
-        - attribute: width_mm
+        - attribute: item.attributes.width_mm
           operator: <=
           value: '{MaxSizeOtherSideValues.ROLL}'
-        - attribute: productName
+        - attribute: item.productName
           operator: NOT_IN
           value:
             - '{ProductNames.PRODUCT_LABELS_ON_ROLL}'
@@ -30,10 +30,10 @@ rules:
     conditions:
       relationMode: OR
       conditions:
-        - attribute: height_mm
+        - attribute: item.attributes.height_mm
           operator: <=
           value: '{MaxSizeOtherSideValues.ROLL}'
-        - attribute: productName
+        - attribute: item.productName
           operator: NOT_IN
           value:
             - '{ProductNames.PRODUCT_LABELS_ON_ROLL}'
