--- a/apps/api/src/configuration/filters/FixedQuantityFilter.yaml
+++ b/apps/api/src/configuration/filters/FixedQuantityFilter.yaml
@@ -6,17 +6,17 @@ rules:
     conditions:
       relationMode: and
       conditions:
-        - attribute: reseller
+        - attribute: item.attributes.reseller
           operator: not_in
           value:
             - stickersthatstick
             - stickit
         - relationMode: or
           conditions: 
-            - attribute: productName
+            - attribute: item.productName
               operator: ===
               value: 3d_dome
-            - attribute: laminate
+            - attribute: item.attributes.laminate
               operator: in
               value:
                 - epoxy
