--- a/apps/api/src/configuration/filters/MinSizeFilter.yaml
+++ b/apps/api/src/configuration/filters/MinSizeFilter.yaml
@@ -11,7 +11,7 @@ rules:
     conditions:
       relationMode: and
       conditions:
-        - attribute: reseller
+        - attribute: item.attributes.reseller
           operator: ===
           value: stickersthatstick
 
@@ -20,11 +20,11 @@ rules:
     conditions:
       relationMode: or
       conditions:
-        - attribute: material
+        - attribute: item.attributes.material
           operator: in
           value:
             - white_wall
-        - attribute: productName
+        - attribute: item.productName
           operator: in
           value:
             - wall
@@ -35,7 +35,7 @@ rules:
     conditions:
       relationMode: and
       conditions:
-        - attribute: productName
+        - attribute: item.productName
           operator: in
           value:
             - sheet
@@ -46,7 +46,7 @@ rules:
     conditions:
       relationMode: and
       conditions:
-        - attribute: productName
+        - attribute: item.productName
           operator: in
           value:
             - sheet_legacy
@@ -56,7 +56,7 @@ rules:
     conditions:
       relationMode: and
       conditions:
-        - attribute: productName
+        - attribute: item.productName
           operator: in
           value:
             - labels_on_sheet
