--- a/apps/api/src/configuration/collections/sticker_production.yaml
+++ b/apps/api/src/configuration/collections/sticker_production.yaml
@@ -1,8 +1,9 @@
 name: sticker_production
+type: constraint
 values:
-  - FeatureConstraint
-  - MaterialConstraint
-  - ProductionLineConstraint
-  - ColorSupportedConstraint
-  - CutDirectionConstraint
-  - DeliveryRollSizeTypeConstraint
+  - feature
+  - material
+  - production_line
+  - color_supported
+  - cut_direction
+  - delivery_roll_size_type
