--- a/apps/api/src/configuration/services/stickerapp.yaml
+++ b/apps/api/src/configuration/services/stickerapp.yaml
@@ -8,9 +8,9 @@ families:
 #   - promo
 #   - fee
 collections:
-  - sticker_wizard_filters
-  - sticker_production
-  - sticker_assets
+  filter: sticker_wizard_filters
+  constraint: sticker_production
+  asset: sticker_assets
 attributes:
   - sheet_type
   - sheet_name
